# ros_phoenix

./: CMakeLists.txt  package.xml
bringup/config/: diffbot_controllers.yaml  gaz_ros2_ctl_use_sim.yaml  joystick.yaml  localization.yaml  mapper_params_online_async.yaml  nav2_params_v2.yaml
bringup/launch/: diffbot.launch.py
description/launch/: view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/rviz/: gz_simulation.rviz  gz_slam_nav2_simulation.rviz
description/urdf/: brackets.xacro  depth_camera.xacro  diffbot.materials.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro  lidar-3d.urdf.xacro  lidar.xacro  lidar_3d.xacro  robot_core.urdf.xacro  robot_core.xacro
doc/: document_adding_phoenix.txt  ros_foxy_to_humble_talon.txt
include/ros_phoenix/: phoenix_bridge.hpp  phoenix_node.hpp  phoenix_system.hpp
launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rplidar.launch.py  rs_multi_camera_launch.py  rsp.launch.py  test_ekf.launch.py
scripts/: example_nav_to_pose.py
src/: base_node.cpp  phoenix_bridge.cpp  phoenix_system.cpp
world/: UCF2.world  UCF2_rocks.world  lunabotic_lab_hall.world  lunabotic_lab_hall_v2.world  lunabotic_lab_hall_v2_obstacle.world
