<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_phoenix</name>
  <version>0.0.0</version>
  <description>ROS2 Support for CTRE Phoenix</description>
  <maintainer email="vanderbiltrobotics@gmail.com">Vanderbilt Robotics</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  

  
  <build_depend>rosidl_default_generators</build_depend>
  <!-- K-nguyen 2/10/24 -->
  <build_depend>rclcpp_lifecycle</build_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros_imu</exec_depend>
  <exec_depend>gazebo_ros_imu_sensor</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
